<resources>
    <string name="app_name">Scholar Quiz</string>
    <string name="login_prferance">org.sairaa.scholarquiz.login_preference</string>
    <string name="login_status_preference">org.sairaa.scholarquiz.login_status_preference</string>
    <string name="quizId_moderator">org.sairaa.scholarquiz.quizId_moderator</string>
    <string name="quizName_moderator">org.sairaa.scholarquiz.quizName_moderator</string>
    <string name="quiz_published_or_not">org.sairaa.scholarquiz.quizId_published_moderator</string>
    <string name="login_heading">Log In</string>
    <string name="login_email_hint">Enter Email Id</string>
    <string name="login_pwd_hint">Enter Password</string>
    <string name="remem_checkbox">Remember me</string>
    <string name="forgot_textview">Forgot Password?</string>
    <string name="newUser">Don\'t have an account yet?</string>
    <string name="regLogIn">Sign Up</string>
    <string name="regHeading">Sign Up</string>
    <string name="user_name">Your Full Name</string>
    <string name="reg_Email_id">Your E-mail id</string>
    <string name="slack_id">Your Slack id</string>
    <string name="spash_screen_bt">Made with \u2764 by Udacitians</string>
    <string name="password1">Create Password</string>
    <string name="password2">Confirm Password</string>
    <string name="additional_info">Phone No./ Other Info</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyUser">Already a User?</string>
    <string name="loginHere">Sign In</string>
    <string name="forgotPwd_slackId">Enter your registered Slack Id</string>
    <string name="forgotPwd_emailId">Enter your registered E-mail Id</string>
    <string name="forgotPwd_forgotnote">Link with be send to your email id</string>
    <string name="forgotPwd_submit">SUBMIT</string>
    <string name="forgotPwd_title">Forgot Password?</string>
    <string name="forgotNewPassword">Enter a New Password</string>
    <string name="forgotConfPassword">Confirm New Password</string>
    <string name="forgotEmptyfield1">Note: Please enter your E-mail and Slack Ids.</string>
    <string name="forgotEmptyfield2">Note: Please enter your E-mail Id also.</string>
    <string name="forgotEmptyfield3">Note: Please enter your Slack Id also.</string>
    <string-array name="mod_correct_answer">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>