<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/backgroundwall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="18dp"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/regHeading"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="14dp">

            <EditText
                android:id="@+id/slackid_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/slack_id"
                android:inputType="textEmailAddress"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/name_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/user_name"
                android:inputType="textCapWords"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/email_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/reg_Email_id"
                android:inputType="textEmailAddress"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/password_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/confirm_password_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/info_reg"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:hint="@string/additional_info"
                android:inputType="textLongMessage"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/register_reg"
                style="@style/buttonStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_design"
                android:text="@string/signup" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="9dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/google_sans"
                android:text="@string/alreadyUser"
                android:textSize="18sp"
                android:theme="@style/checkBoxStyle" />

            <Button
                android:clickable="true"
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/google_sans_bold"
                android:gravity="center"
                android:text="@string/loginHere"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/button_login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>