<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundwall"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="90dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/forgot_title"
            style="@style/titleWhiteMonospace"
            android:text="@string/forgotPwd_title"
            android:padding="18dp"
            android:fontFamily="@font/google_sans_bold"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="24sp"/>

        <EditText
            android:id="@+id/forgot_pwd_email"
            style="@style/editTextStyle"
            android:hint="@string/forgotPwd_emailId"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/forgot_pwd_slack"
            style="@style/editTextStyle"
            android:hint="@string/forgotPwd_slackId"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/forgot_pwd_submit"
            style="@style/forgotpwdbuttonStyle"
            android:background="@drawable/button_design"
            android:text="@string/forgotPwd_submit"/>
    </LinearLayout>
</ScrollView>