<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backgroundwall"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/login_heading"
            android:textAlignment="center"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="30sp"
            android:padding="18dp"/>

        <LinearLayout
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="18dp">

            <EditText
                android:id="@+id/email_login"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:fontFamily="@font/google_sans"
                android:hint="@string/login_email_hint"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_login"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:textSize="15sp"
                android:fontFamily="@font/google_sans"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword" />

            <CheckBox
                android:id="@+id/rememberMe_CheckBox"
                style="@style/checkBoxStyle"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="58dp"
                android:fontFamily="@font/google_sans"
                android:text="@string/remem_checkbox"
                android:theme="@style/checkBoxStyle" />

            <Button
                android:id="@+id/signin_login"
                style="@style/buttonStyle"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/login_heading" />

            <TextView
                android:id="@+id/forgotPassword_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/google_sans"
                android:gravity="center_horizontal"
                android:text="@string/forgot_textview"
                android:textColor="@color/colordarkgrey"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corners"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/google_sans"
                android:gravity="center_horizontal"
                android:text="@string/newUser"
                android:textSize="18sp"
                android:theme="@style/checkBoxStyle" />

            <Button
                android:id="@+id/register"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:background="@drawable/button_login"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/regLogIn"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>